Implement base models, serializers and configure init endpoint for rezervation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:14
     restart: always
     environment:
-      POSTGRES_DB: praca_inz
-      POSTGRES_USER: MW
-      POSTGRES_PASSWORD: MWpassword
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
