--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,23 @@
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "chakra": "^0.0.3",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "sonner": "^2.0.6",
+    "swiper": "^11.2.10",
+    "three": "^0.178.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
