--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "chakra": "^0.0.3",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
